// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Should render a SearchResult with title, url and description 1`] = `
<DocumentFragment>
  <div
    class="searchResult"
  >
    <div
      class="title"
    >
      Test SEO Title
    </div>
    <div
      class="url"
    >
      http://www.sulu.io/test
    </div>
    <div
      class="description"
    >
      Yay!
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render a SearchResult without title, url and description 1`] = `
<DocumentFragment>
  <div
    class="searchResult"
  >
    <div
      class="title"
    />
    <div
      class="url"
    />
    <div
      class="description"
    />
  </div>
</DocumentFragment>
`;
